# DEDS_Portfolio

./: .gitignore  README.md  pyproject.toml
src/deds_portfolio/: DEDS_WC_1.1a_Opdrachten.ipynb  DEDS_WC_1.1b_Opdrachten.ipynb  DEDS_WC_1.2_en_1.3_Opdrachten.ipynb  script.py
src/deds_portfolio/project/: Kaggle1.ipynb  Reset_Knop.ipynb  Script_W10_1.ipynb  Script_W9_1.ipynb  Script_W9_2.ipynb  dataWarehouse.ipynb  go_sales_train_to_png.py  go_staff_train_to_png.py  inventory_levels_train.py  main.py  output.xlsx  product_forecast_train.py  script.py  settings.py  simpel_neuraal_netwerk.ipynb  sourceDataModel.ipynb  sourceDataModel.py  sterschema.py  week10.ipynb  week9.ipynb
src/deds_portfolio/project/data/processed/: RIM TOTAAL SDM.txt  go_sales_train  go_staff_train  inventory_levels_train  output.xlsx  product_forecast_train  sourceDataModel  sterschema
src/deds_portfolio/project/data/raw/: go_sales_train.sqlite  go_sales_train2.sqlite
src/deds_portfolio/project/neuralnetworks/: 12.1.1.ipynb  12.1.2.ipynb  12.2.1.py  12.2.2.py  12.2.3.py  12.3.1-test.txt  12.3.1.py  12.3.2-test.txt  12.3.3-test.txt  12.3.4-test.txt  12.3.5-test.txt  output12.2.txt
src/deds_portfolio/project/pygame/: environment.py  main.py  q_learning.py  utils.py
src/deds_portfolio/project/sql/: go_sales_train.sqlite  go_sales_train2.sqlite
src/deds_portfolio/sql/: go_sales_train.sqlite
